# photos_cli

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
diagram/: .$photo_cli-structur_diagram.drawio.bkp  photo_cli-structur_diagram.drawio
src/: ColorLoggingFormatter.py  main.py  rename_functions.py
src/commands/: rename.py  time.py
src/functions/: adjust_time.py  changeDataTaken.py  check_extensions.py  generalFunctions  generalFunctions.py  renameFunctions.py  timeFunctions.py
